# ComputerVision

./: .gitignore  harris_detector.cpp
HarrisDetector/: CMakeLists.txt  harris_detector.cpp
HelloWorld/: CMakeLists.txt  helloworld.cpp
MatchTemplate/: CMakeLists.txt  match_templates.cpp
MixImgs/: CMakeLists.txt  mix_img.cpp
OrientationHistograms/: CMakeLists.txt  histogram.txt  orient_hist.cpp
Solarisation/: CMakeLists.txt  solarisation.cpp
